k3s _components/argocd/argocd-config.yaml
# argocd-config.yaml

# Service pour ArgoCD Server
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
spec:
  type: ClusterIP
  ports:
    - port: 80             # Port HTTP exposé
      targetPort: 8080     # Port cible sur lequel ArgoCD écoute
      protocol: TCP
      name: http
    - port: 443            # Port HTTPS exposé
      targetPort: 8080     # Port cible sur lequel ArgoCD écoute
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: argocd-server  # Sélecteur pour associer ce service aux pods ArgoCD server

---

# Ingress pour exposer le service ArgoCD
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx               # Classe d'ingress utilisée
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # Redirection HTTP vers HTTPS
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" # Utilisation du protocole HTTPS pour le backend
spec:
  rules:
  - host: <DOMAINNAME>                               # Nom de domaine pour accéder à ArgoCD
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server                      # Nom du service ArgoCD
            port:
              number: 80                             # Port utilisé pour accéder au service
  tls:
  - hosts:
    - <DOMAINNAME>                                   # Nom de domaine pour la configuration TLS
    secretName: argocd-tls                           # Nom du secret TLS
